wave/src/main/resources/org/waveprotocol/wave/client/widget/toolbar/ToplevelToolbarWidget.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 * CSS stylesheet for ToplevelToolbarWidget.
 *
 * Author: kalman@google.com (Benjamin Kalman).
 */


.toolbar, .overflowButton {
  /* Hack to position the button dividers underneath the buttons. */
  position: relative;
  z-index: 0;
}

@sprite .toolbar {
  gwt-image: 'fillImage';
  /* Hide buttons that exceed the row width. flex-wrap: wrap allows
     OverflowPanelUpdater to detect overflowed buttons via offsetTop > 0
     (they've wrapped to a second row) and move them to the "..." submenu.
     Toolbars with overflow disabled set flex-wrap: nowrap via inline style
     in ToplevelToolbarWidget.setOverflowEnabled(false) instead. */
  overflow: hidden;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  height: auto;
  min-height: 36px;
  box-sizing: border-box;
  background-image: linear-gradient(180deg, #eef7ff 0%, #dcecff 100%);
  background-color: #e7f2ff;
  border-top: 1px solid rgba(120, 170, 220, 0.45);
  border-bottom: 1px solid rgba(120, 170, 220, 0.35);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.9);
}

@sprite .overflowButton {
  gwt-image: 'fillImage';
  float: right;
  box-sizing: border-box;
  min-height: 36px;
  background-image: linear-gradient(180deg, #eef7ff 0%, #dcecff 100%);
  background-color: #e7f2ff;
  border-top: 1px solid rgba(120, 170, 220, 0.45);
  border-bottom: 1px solid rgba(120, 170, 220, 0.35);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.9);
}

@sprite .overflowButtonIcon {
  gwt-image: 'overflowButtonIcon';
  float: right;
}

